# VoxWeave

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: calib_segmentation.py  capture_scenario.py  song_scores.py
tests/: test_align_common.py  test_asrfix.py  test_backend.py  test_backend_mlx.py  test_breakpoints.py  test_chunking.py  test_cli.py  test_config.py  test_config_gap.py  test_diarize.py  test_diarize_compat.py  test_diarize_format.py  test_diarize_smoothing.py  test_download_progress.py  test_emission_mask.py  test_export.py  test_fsio.py  test_keep_lyrics.py  test_kinsoku.py  test_lang.py  test_mux.py  test_mux_sibling.py  test_pipeline.py  test_runtime_errors.py  test_scenarios.py  test_sdh.py  test_semantic_breaks.py  test_semantic_worker.py  test_shot_snap.py  test_smart_split.py  test_smart_split_cleanup.py  test_smart_split_gap.py  test_smart_split_glue.py  test_smart_split_micro.py  test_smart_split_semantic.py  test_smart_split_stutter.py  test_songdet.py  test_split_cursor_sync.py  test_subformats.py  test_translate.py  (+2 more)
tests/scenarios/: isekai-op-sting.json  meido-head-rescue.json
voxweave/: align_common.py  align_ctc.py  align_mms.py  asrfix.py  backend.py  backend_mlx.py  chunking.py  cli.py  config.py  debug.py  diarize.py  export.py  fsio.py  lang.py  mux.py  pipeline.py  progress.py  realign.py  runtime.py  sdh.py  semantic_breaks.py  semantic_worker.py  shotdet.py  songdet.py  subformats.py  translate.py  ui.py
voxweave/core/: __init__.py  breakpoints.py  kinsoku.py  langsets.py  layout.py  schema.py  smart_split.py  timing.py
