[project]
name = "voxweave"
version = "0.8.0"
description = "BGM-robust subtitles for anime / film / clips: vocal separation + song-skip so ASR doesn't hallucinate on background music, OP/ED, or insert songs. Local-first Qwen3 ASR + forced alignment + edit-and-resync, CJK-aware."
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
authors = [{ name = "Hao Li" }]
keywords = ["subtitles", "asr", "forced-alignment", "whisper", "qwen", "vtt"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
  "Topic :: Text Processing :: Linguistic",
  "Environment :: GPU :: NVIDIA CUDA",
]
dependencies = [
  # Core runtime: VAD + audio I/O + CLI.
  "silero-vad>=5",
  "soundfile>=0.12",
  # Upper bound tracks numba's numpy ceiling: librosa -> numba, and every numba with a
  # py3.12 wheel (<=0.65.1) pins numpy<2.5. Without this cap uv maximizes numpy to the
  # latest (>=2.5.0), finds no modern numba, and backtracks to numba 0.53.1 — an sdist
  # with no py3.12 wheel that fails to build (RuntimeError: only py >=3.6,<3.10), pulling
  # the unbuildable llvmlite 0.36.0 with it. Raise when numba ships a numpy>=2.5 release.
  "numpy>=1.26,<2.5",
  "click>=8.1",
  "rich>=13",
  # Rich-rendered --help panels (drop-in click wrapper; pure Python, depends only on click+rich).
  "rich-click>=1.8",
  # Model downloads (separator / PANNs / MLX snapshots) go through huggingface_hub directly —
  # an explicit core dep so it doesn't rely on qwen-asr/mlx-audio (which live in the extras) to
  # pull it transitively.
  "huggingface-hub>=0.24",
  # --- Local Qwen3 pipeline (default engine; in-process PyTorch on GPU; see voxweave.backend) ---
  # qwen-asr itself lives in the [cuda] extra (it hard-pins transformers==4.57.6, mutually
  # exclusive with the [mps] build's mlx-audio>=transformers 5.5 — see the conflicts table below).
  # Its lighter runtime deps stay in core because the vendored Mel-Band Roformer separator needs
  # them on BOTH platforms: einops + rotary-embedding-torch + beartype (PyPI bs-roformer has
  # architecture drift, so the model is frozen in voxweave.vendor). librosa is used for audio I/O.
  "einops>=0.8",
  "rotary-embedding-torch>=0.6",
  "beartype>=0.18",
  "librosa>=0.10",
  "pyyaml>=6",
  # wav2vec2 CTC forced alignment for English (WhisperX-equivalent; backend.align_text_ctc).
  # Tracks torch ABI; lower bound only.
  "torchaudio>=2.1",
  # MMS-300m + uroman forced alignment (default aligner for ja/CJK; zero OOV; align_text_mms).
  # The onnxruntime build is platform-selected via the [cuda]/[mps] extras (onnxruntime-gpu on
  # CUDA, plain onnxruntime on macOS) — see [project.optional-dependencies] + [tool.uv] below.
  # unidecode is an undeclared implicit dep of ctc-forced-aligner.preprocess_text.
  # Model auto-downloads to ~/.cache/ctc-forced-aligner on first run.
  "ctc-forced-aligner>=1.0.2",
  "unidecode>=1.3",
  # Subtitle layout/re-wrap: smart_split logic lives in voxweave.core; PySBD is its runtime dep.
  "pysbd>=0.3.4",
  # PANNs song-skip detection (--skip-songs).
  "panns-inference>=0.1.0",
  # CJK line-break: BudouX phrase atoms as non-breakable units (ja/zh) + jieba word segmentation
  # to snap Qwen's off-boundary punctuation back to word edges. Both lazy-imported
  # (voxweave.realign.snap_break_punct); fall back to character-level if import fails.
  "budoux>=0.8",
  "jieba>=0.42",
  # ja line-end scoring Level 2: POS-based penalties (kinsoku.ja_pos_end_penalties)
  # distinguish 準体の (legal break) from 格助詞の (binds forward). Lazy-imported;
  # falls back to the kana char table when absent. unidic-lite ships the dictionary.
  "fugashi>=1.3",
  "unidic-lite>=1.0.8",
  # OpenAI subtitle translation (translate sub-command; lazy import).
  "openai>=1.40",
]

[project.scripts]
voxweave = "voxweave.__main__:cli"

# Two mutually-exclusive install variants, one per compute platform (see the [tool.uv] conflicts
# table). The separation / smart_split layout / PANNs song-skip / CJK line-break / translation
# pipeline lives in the core deps above; each variant adds its platform's ASR + alignment stack.
[project.optional-dependencies]
# NVIDIA CUDA build (Linux): in-process PyTorch Qwen3-ASR + aligner (qwen-asr), GPU onnxruntime
# (CUDAExecutionProvider for MMS alignment) + the faster-whisper hybrid engine (--model large-v3 /
# large-v3-turbo; pulls ctranslate2 + PyAV). onnxruntime-gpu/faster-whisper carry a non-darwin
# marker (no such wheels on macOS), so resolving [cuda] in its fork degrades cleanly there.
cuda = [
  "qwen-asr>=0.0.4",
  "onnxruntime-gpu>=1.20; sys_platform != 'darwin'",
  "faster-whisper>=1.1; sys_platform != 'darwin'",
  # transformers 4.57.6 (qwen-asr pin) runtime-gates huggingface-hub<1.0 in its
  # dependency_versions_table, but its wheel metadata is looser — the resolver happily
  # locks hub 1.x and then EVERY `import transformers` dies at the version check
  # (ASR + the en HF aligner path). Bound it in this extra only: the [mps] fork's
  # transformers 5.x needs hub>=1.0, so the pin cannot live in core deps.
  "huggingface-hub<1.0",
]
# Apple Silicon (macOS / MPS) build. ASR + forced alignment are served by the native MLX ports
# from mlx-audio (Metal kernels + quantization; see voxweave.backend_mlx) — faster and lower-memory
# than the torch models on MPS, and the only way to run ja/CJK alignment on the GPU (onnxruntime
# has no Metal provider). mlx is Apple-Silicon-only, so it carries a darwin+arm64 marker.
# qwen-asr is excluded from core on darwin (its transformers==4.57.6 pin conflicts with mlx-audio's
# transformers>=5.5), so the MLX backend is the ASR/alignment path on macOS. onnxruntime (CPU/CoreML)
# is kept for the torch fallback's CTC aligners (VOXWEAVE_BACKEND=torch). faster-whisper is omitted
# (ctranslate2 has no Metal backend); the hybrid/fusion engines' whisper text comes from mlx-whisper
# (the Metal port) instead — see voxweave.backend_mlx.get_whisper. torch's macOS wheel ships MPS in.
mps = [
  "onnxruntime>=1.20; sys_platform == 'darwin'",
  "mlx-audio>=0.4.4; sys_platform == 'darwin' and platform_machine == 'arm64'",
  "mlx-whisper>=0.4; sys_platform == 'darwin' and platform_machine == 'arm64'",
]
# Speaker diarization (--diarize): pyannote.audio 3.x + pyannote/speaker-diarization-3.1
# (MIT, ~1.6 GB VRAM; the 4.x line needs torch>=2.8 and currently peaks ~9.5 GB on the
# same model — see pyannote-audio#1963). The checkpoint is HF-gated: accept the model
# card conditions and set VOXWEAVE_HF_TOKEN / HF_TOKEN.
diarize = [
  "pyannote-audio>=3.4,<4",
]

[dependency-groups]
dev = ["pytest>=8", "pyright>=1.1.390"]

[tool.uv]
# ctc-forced-aligner (and, on CUDA, faster-whisper) hard-depend on the CPU `onnxruntime` package,
# which installs the same `onnxruntime` import name as `onnxruntime-gpu`. On Linux/CUDA the CPU
# build would shadow the GPU one and drop CUDAExecutionProvider (MMS alignment degrades to CPU —
# unusably slow on a 24-minute episode). We restrict CPU onnxruntime to Darwin: on macOS it is the
# correct (and only) build, while on Linux the marker is false so it is dropped and the [cuda]
# extra's onnxruntime-gpu satisfies `import onnxruntime` with the CUDA provider intact.
# NOTE: this section only applies to the project workflow (`make dev` / uv sync). `uv tool install`
# ignores it, so the Makefile passes the same rule via `--overrides overrides.txt` — keep both in sync.
override-dependencies = ["onnxruntime; sys_platform == 'darwin'"]
# [cuda] (qwen-asr -> transformers==4.57.6) and [mps] (mlx-audio -> transformers>=5.5) are mutually
# exclusive: declaring them conflicting lets uv resolve each in its own fork instead of trying to
# satisfy both transformers pins at once. Pick exactly one per host (see the Makefile VARIANT).
conflicts = [[{ extra = "cuda" }, { extra = "mps" }]]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["voxweave*"]

[tool.setuptools.package-data]
# Separator config bundled with the package (must match the frozen MelBandRoformer
# architecture vendored in voxweave.vendor).
"voxweave.vendor" = ["*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
# Production code only: tests are monkeypatch-heavy and would drown the signal.
# Basic mode, zero errors — the CI gate keeps new type noise from accumulating
# (warnings were previously unmanaged and the signal had rotted).
include = ["voxweave"]
exclude = ["voxweave/vendor"]
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"

[tool.ruff]
# voxweave/vendor contains frozen third-party model code (lucidrains/audio-separator) -- skip lint/format
extend-exclude = ["voxweave/vendor"]
